tests/cases/scc/error/0015-macro.c.res
./tests/cases/scc/error/0015-macro.c:2:11:	error:   macro parameters may not be duplicated.
exit code 1
